--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,3 +11,7 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+# - repo: https://github.com/edwardtheharris/pre-commit-jira-ticket-gh-issue
+#   rev: v0.0.1
+#   hooks:
+#   - id: prepare-commit-msg
