Update docs config
Closes #1

--- a/Pipfile
+++ b/Pipfile
@@ -23,3 +23,4 @@ sphinx-git = "*"
 sphinx-last-updated-by-git = "*"
 sphinxcontrib-autoyaml = "*"
 sphinxcontrib-programoutput = "*"
+version-query = "*"
