--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -96,14 +96,14 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@main
         with:
-          python-version: 3.11
+          python-version: 3.13
           cache: pipenv
       - name: Setup pages
         uses: actions/configure-pages@main
       - name: Install pipenv
         run: curl https://raw.githubusercontent.com/pypa/pipenv/master/get-pipenv.py | python
       - name: Install Python dependencies
-        run: pipenv install
+        run: pipenv install --dev
       - name: Build the static site
         run: pipenv run sphinx-build -a -E . deploy
       - name: Upload artifact
