--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ pytest = "*"
 pytest-cov = "*"
 
 [dev-packages]
+myst-parser = {extras = ["linkify"], version = "*"}
 sphinx = "*"
 sphinx-autobuild = "*"
 sphinx-book-theme = "*"
