Add pyproject toml
Closes #3

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,4 +14,4 @@ repos:
 # - repo: https://github.com/edwardtheharris/pre-commit-jira-ticket-gh-issue
 #   rev: v0.0.1
 #   hooks:
-#   - id: prepare-commit-msg
+#   - id: prepare-commit-message
